--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -14,9 +14,10 @@
             </NavLink>
         </div>
 
+      
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ingredients">
-                🍅 Ingredients
+            <NavLink class="nav-link" href="user-info">
+               Users Info
             </NavLink>
         </div>
     </nav>
