--- a/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Components/Layout/MainLayout.razor
@@ -1,10 +1,17 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Authorization
+@inherits LayoutComponentBase
+@inject NavigationManager NavManager
+
+
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
-
+    
+    @if (!NavManager.Uri.Contains("login"))
+    {
+        <div class="sidebar">
+            <NavMenu/>
+        </div>
+    }
     <main>
         <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
