--- a/Frontend/Components/Pages/UsersInfo.razor
+++ b/Frontend/Components/Pages/UsersInfo.razor
@@ -1,5 +1,4 @@
 ﻿@page "/user-info"
-@inject IJSRuntime JSRuntime
 @using Frontend.Helpers
 @using global::Helpers.Models
 @using Microsoft.AspNetCore.Components.Authorization
@@ -8,11 +7,7 @@
 
 <PageTitle>User Info</PageTitle>
 
-
 <h1>User Info</h1>
-
-
-<button class="btn btn-primary mb-3">Add User</button>
 
 @if (_users == null)
 {
@@ -26,8 +21,6 @@ else
           
             <th>Username</th>
             <th>Role</th>
-            <th>Actions</th>
-            
         </tr>
         </thead>
         <tbody>
@@ -36,19 +29,7 @@ else
             <tr>
                 
                 <td>@user.Username</td>
-                <td>@user.fk_role_id</td>
-                
-                <td>
-                    <div class="d-flex gap-2"> 
-                        <button class="btn btn-secondary btn-sm" >
-                            <i class="bi bi-pencil"></i> 
-                        </button>
-                        <button class="btn btn-danger btn-sm" >
-                            <i class="bi bi-trash" @onclick="() => DeleteUserById(user.UserId)"></i> 
-                        </button>
-                    </div>
-                </td>
-                
+                <td>@user.RoleId</td>
             </tr>
         }
         </tbody>
@@ -57,38 +38,13 @@ else
 
 @code {
     private List<UserViewModel>? _users;
- 
 
     protected override async Task OnInitializedAsync()
     {
+     
+        
         
             _users = await ApiHelper.GetFromApiAsync<List<UserViewModel>>("get_all_users");
         
-    }
-    
-    
-    
-    
-    private async Task DeleteUserById(int userId)
-    {
-        try
-        {
-            bool success = await ApiHelper.DeleteFromApiAsync($"delete_user_by_id/{userId}");
-
-            if (success)
-            {
-                _users.RemoveAll(u => u.UserId == userId);
-                StateHasChanged();
-                await JSRuntime.InvokeVoidAsync("alert", "Usuário deletado com sucesso!");
-            }
-            else
-            {
-                await JSRuntime.InvokeVoidAsync("alert", "Erro ao excluir usuário.");
-            }
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine($"Erro: {ex.Message}");
-        }
     }
 }
