--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -17,11 +17,8 @@
       
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="user-info">
-                <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Users Info
+                <span class="bi bi-person-fill" aria-hidden="true"></span> Users Info
             </NavLink>
         </div>
-
-
-      
     </nav>
 </div>
