--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -14,10 +14,9 @@
             </NavLink>
         </div>
 
-      
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="user-info">
-               Users Info
+            <NavLink class="nav-link" href="ingredients">
+                🍅 Ingredients
             </NavLink>
         </div>
     </nav>
