--- a/Frontend/Components/Pages/UsersInfo.razor
+++ b/Frontend/Components/Pages/UsersInfo.razor
@@ -9,9 +9,11 @@
 
 <h1>User Info</h1>
 
-@if (_users == null)
+@if (_user == null)
 {
-    <p><em>Loading...</em></p>
+    <p>
+        <em>Loading...</em>
+    </p>
 }
 else
 {
@@ -24,20 +26,17 @@ else
         </tr>
         </thead>
         <tbody>
-        @foreach (var user in _users)
-        {
-            <tr>
-                <td>@user.UserId</td>
-                <td>@user.Username</td>
-                <td>@user.RoleId</td>
-            </tr>
-        }
+        <tr>
+            <td>@_user.UserId</td>
+            <td>@_user.Username</td>
+            <td>@_user.RoleId</td>
+        </tr>
         </tbody>
     </table>
 }
 
 @code {
-    private List<UserViewModel>? _users;
+    private UserViewModel? _user;
 
     protected override async Task OnInitializedAsync()
     {
@@ -46,7 +45,8 @@ else
         
         if (user.Identity is { IsAuthenticated: true })
         {
-            _users = await ApiHelper.GetFromApiAsync<List<UserViewModel>>("get_all_users");
+            string username = user.Identity.Name;
+            _user = await ApiHelper.GetFromApiAsync<UserViewModel>($"get_user/{username}");
         }
     }
 }
