--- a/Frontend/Components/App.razor
+++ b/Frontend/Components/App.razor
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="Frontend.styles.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
 </head>
