--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -27,6 +27,10 @@
             <NavLink class="nav-link" href="user-info">
                 👨‍💼 User Profile
             </NavLink>
+
+            <NavLink class="nav-link" href="minimal">
+                🅱️ Simple Button Test
+            </NavLink>
         </div>
     </nav>
 </div>
