Add comments explaining the issue with buttons

--- a/Frontend/Components/Pages/MinimalTest.razor
+++ b/Frontend/Components/Pages/MinimalTest.razor
@@ -1,7 +1,10 @@
 ﻿@page "/minimal"
 
+@* Uncommenting the line bellow will make the page render as a server-side Blazor component. *@
+@* Otherwise, it will be rendered as a static HTML page, which has non-interactive buttons. *@
+@* In auto-rendering mode, we need to specify the rendering mode in the `@rendermode` directive. *@
 
-@rendermode InteractiveServer
+@* @rendermode InteractiveServer *@
 
 <h3>Minimal Test</h3>
 
