--- a/Frontend/Components/App.razor
+++ b/Frontend/Components/App.razor
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,7 +18,7 @@
 
 <body>
 <Routes/>
-<script src="_framework/blazor.web.js"></script>
+<script src="_framework/blazor.server.js"></script>
 </body>
 
 </html>
