--- a/Frontend/Components/Pages/UpdateUsersInfo.razor
+++ b/Frontend/Components/Pages/UpdateUsersInfo.razor
@@ -1,9 +1,9 @@
-﻿@page "/update-user-info"
+﻿@page "/update-user-info/{UserId:int}"
 @using Frontend.Helpers
 @using Frontend.Models
 @using global::Helpers.Models
 @inject ApiHelper ApiHelper
-
+@rendermode InteractiveServer
 <PageTitle>Update User Info</PageTitle>
 
 @if (_user == null)
@@ -19,9 +19,13 @@ else
             <InputText id="password" @bind-Value="_user.Password" type="password" class="form-control" />
         </div>
 
-        <div class="mb-3">
-            <label for="roleId">Role ID:</label>
-            <InputNumber id="roleId" @bind-Value="_user.RoleId" class="form-control" />
+        <div class="form-group">
+            <label for="role">Role:</label>
+            <InputSelect id="role" class="form-control" @bind-Value="_user.RoleId">
+                <option value="1">Admin</option>
+                <option value="2">UserManager</option>
+                <option value="3">User</option>
+            </InputSelect>
         </div>
 
         <button type="submit" class="btn btn-primary">Update</button>
@@ -29,6 +33,9 @@ else
 }
 
 @code {
+    [Parameter]
+    public int UserId { get; set; }
+
     private UserUpdateModel? _user;
 
     
