--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -14,14 +14,16 @@
             </NavLink>
         </div>
 
-      
+
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="user-info">
-                <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Users Info
+            <NavLink class="nav-link d-flex align-items-center" href="user-info">
+                <i class="bi bi-person-fill me-2"></i>
+                <span>Users Info</span>
             </NavLink>
         </div>
 
 
-      
+
+
     </nav>
 </div>
