--- a/Frontend/Components/Pages/UpdateUsersInfo.razor
+++ b/Frontend/Components/Pages/UpdateUsersInfo.razor
@@ -7,7 +7,10 @@
 @using Microsoft.AspNetCore.Components.Forms
 @rendermode InteractiveServer
 
-<PageTitle>Update User Info</PageTitle>
+<PageTitle>Update User</PageTitle>
+
+
+<h1>Update User</h1>
 
 @if (_user == null)
 {
